--- a/mq.style.css
+++ b/mq.style.css
@@ -22,6 +22,8 @@ min-width: de cima até aquele valor*/
 
     #div1 {
         text-align: center;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
     }
 
 
