--- a/mq.style.css
+++ b/mq.style.css
@@ -88,6 +88,8 @@ min-width: de cima até aquele valor*/
         color: rgba(255, 255, 255, 0.966);
         font-family: 'Barlow', sans-serif;
         padding-top: 30px;
+        padding-left: 0px;
+        margin: auto;
         width: 220px;
     }
 
@@ -186,7 +188,9 @@ min-width: de cima até aquele valor*/
         color: rgba(255, 255, 255, 0.966);
         font-family: 'Barlow', sans-serif;
         padding-top: 30px;
-        width: 220px;
+        width: 250px;
+        margin: auto;
+        padding-left: 0px;
     }
     }
 
