--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,13 +26,17 @@
         transform: scale(1.2);
     }
     
-    header img#imgprincipal {
-        width: 210px;
-        height: 210px;
+    header .principal {
+        margin-bottom: 15px;
+    } 
+
+    .principal picture img#imgprincipal {
+        width: 330px;
+        height: 490px;
         border: 3.56px solid rgb(187, 24, 38);
         border-radius: 5px;
         margin-top: 20px;
-    }  
+    } 
     
     header h1 {
         font-size: 1.7em;
@@ -217,6 +221,3 @@
         background-color: beige;
         transform: scale(1.2);
     }
-
-   
-
